// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`passes through inputProps 1`] = `
<form
  className="sui-search-box"
  onSubmit={[Function]}
>
  <input
    className="sui-search-box__text-input "
    onChange={[Function]}
    placeholder="test"
    type="text"
    value="test"
  />
  <input
    className="button sui-search-box__submit"
    type="submit"
    value="Search"
  />
</form>
`;

exports[`renders correctly when \`isFocused\` is false 1`] = `
<form
  className="sui-search-box"
  onSubmit={[Function]}
>
  <input
    className="sui-search-box__text-input "
    onChange={[Function]}
    placeholder="Search your documents…"
    type="text"
    value="test"
  />
  <input
    className="button sui-search-box__submit"
    type="submit"
    value="Search"
  />
</form>
`;

exports[`renders correctly when \`isFocused\` is true 1`] = `
<form
  className="sui-search-box"
  onSubmit={[Function]}
>
  <input
    className="sui-search-box__text-input focus"
    onChange={[Function]}
    placeholder="Search your documents…"
    type="text"
    value="test"
  />
  <input
    className="button sui-search-box__submit"
    type="submit"
    value="Search"
  />
</form>
`;
